[tool.poetry]
name = "indexd"
version = "6.0.0"
description = "Gen3 Indexing Service"
authors = ["CTDS UChicago <cdis@uchicago.edu>"]
license = "Apache-2.0"
repository = "https://github.com/uc-cdis/indexd"
include = [
  "NOTICE",
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
alembic = "^1.9.4"
authutils = ">=6,<8"
cdislogging = "^1.0.0"
doiclient = {git = "https://github.com/uc-cdis/doiclient", rev = "1.0.0"}
dosclient = {git = "https://github.com/uc-cdis/dosclient", rev = "1.1.0"}
gen3authz = "^3.0.0"
hsclient = {git = "https://github.com/uc-cdis/hsclient", rev = "1.0.0"}
indexclient = ">=2.1.0"
jsonschema = "^3.2"
gunicorn = ">=22.0.0"
flask = "^2.3.3"
sqlalchemy = "^1.4.0"
sqlalchemy-utils = "^0.37.3"
PyYAML = ">=5.3,<7"
gitpython = "^3.1.45"
requests = "^2.32.5"
setuptools = "^80.9.0"
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
coveralls = "^3.0.1"
mock = "^4.0.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
pytest-flask = "^1.2.0"
responses = "^0.13.0"
swagger_spec_validator = "^2.6.0"
deptry = "^0.23.1"


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
