[metadata]
name = indexd
description = Data indexing and tracking service.
long_description = file: README.md
long_description_content_type = text/markdown
author = GDC Feature Team
author_email = gdc_dev_questions-aaaaae2lhsbell56tlvh3upgoq@cdis.slack.com
maintainer = GDC Feature Team
maintainer_email = gdc_dev_questions-aaaaae2lhsbell56tlvh3upgoq@cdis.slack.com
license = Apache-2.0
license_files = LICENSE
url = https://github.com/NCI-GDC/indexd
keywords = documents, indexd
classifiers =
    Framework :: Flask
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP :: HTTP Servers

[options]
zip_safe = True
packages = find:
package_dir =
    =src
python_requires = >=3.8
include_package_data = True
install_requires =
    flask>=2.2
    jsonschema>4.17
    importlib_resources<6.2  # TODO: >=6.2 fails for py38 but works ok for 39+
    logstick
    sqlalchemy<1.4  # TODO: Unpin sqlalchemy. Pinning is only required when psqlgraph is involved.
    sqlalchemy-utils>=0.32
    psycopg2>=2.7
    requests>=2.32.2
    ddtrace>=2.9.1
    importlib-metadata>=1.4
    typing-extensions
    zipp>=3.19.1
    werkzeug>=3.0.6

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-env
    pytest-flask
    PyYAML
    openapi-spec-validator

[options.entry_points]
console_scripts =
    index_admin.py = indexd.cli.index_admin:parse_args
    indexd = indexd.cli.indexd:parse_args
    migrate_index.py = indexd.cli.migrate_index:parse_args
