[metadata]
name = indexd
description = Data indexing and tracking service.
long_description = file: README.md
long_description_content_type = text/markdown
author = GDC Feature Team
author_email = gdc_dev_questions-aaaaae2lhsbell56tlvh3upgoq@cdis.slack.com
maintainer = GDC Feature Team
maintainer_email = gdc_dev_questions-aaaaae2lhsbell56tlvh3upgoq@cdis.slack.com
license = Apache-2.0
license_files = LICENSE
url = https://github.com/NCI-GDC/indexd
keywords = documents, indexd
classifiers =
    Framework :: Flask
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.13
    Topic :: Internet :: WWW/HTTP :: HTTP Servers

[options]
zip_safe = True
packages = find:
package_dir =
    =src
python_requires = >=3.13
include_package_data = True
install_requires =
    ddtrace~=4.0.2 # 4.1.0 introduces "Context already registered" errors
    flask>=2.2
    gunicorn>=23.0.0
    JSON-log-formatter>=1.1
    jsonschema>4.17
    logstick>=0.1.6
    psycopg2>=2.7
    requests>=2.32.4
    setproctitle>=1.3.4
    sqlalchemy>=2.0
    sqlalchemy-utils>=0.32
    typing-extensions
    werkzeug>=3.1.4
    zipp>=3.19.1

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-env
    pytest-flask
    PyYAML
    openapi-spec-validator

[options.entry_points]
console_scripts =
    index_admin.py = indexd.cli.index_admin:parse_args
    indexd = indexd.cli.indexd:parse_args
    migrate_index.py = indexd.cli.migrate_index:parse_args
